syntax = "proto3";

package auth;

option go_package = "github.com/vindosVP/go-pass/v1;authv1";

// RegisterRequest is a register handler request
message RegisterRequest {
  string email = 1; // Email of the user to register.
  string password = 2; // Password of the user to register.
}

// RegisterRequest is a register handler request
message RegisterResponse {
  int64 user_id = 1; // User ID of the registered user.
}

// LoginRequest is a login handler request
message LoginRequest {
  string email = 1; // Email of the user to login.
  string password = 2; // Password of the user to login.
}

// LoginResponse is a login handler response
message LoginResponse {
  string token = 1; // Auth token of the logged in user.
}

service Auth {
  // Register registers a new user.
  rpc Register (RegisterRequest) returns (RegisterResponse);
  // Login logs in a user and returns an auth token.
  rpc Login (LoginRequest) returns (LoginResponse);
}